--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"svelte-collapsible": "^0.3.1"
 	}
 }
