--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"embla-carousel-svelte": "^8.5.1",
 		"isotope-layout": "^3.0.6",
 		"svelte-collapsible": "^0.3.1"
 	}
