--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 	"dependencies": {
 		"embla-carousel-svelte": "^8.5.1",
 		"isotope-layout": "^3.0.6",
-		"svelte-collapsible": "^0.3.1"
+		"svelte-collapsible": "^0.3.1",
+		"svelte-video-player": "^1.2.5",
+		"svelte-video-player-kit": "^1.2.8"
 	}
 }
